optician app delete and loading spinner

--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -37,14 +37,14 @@
                                 </li>
                                 <li id="step4" [class.liDisabled]="!stepsEnabled(3)" (click)="navigate(3)"><a
                                         href="#date-time" data-toggle="tab">Step 3 (Date & Time)</a></li>
-                                <li id="step5" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
+                                <!-- <li id="step5" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
                                         href="#optician-appointment" data-toggle="tab">Step 4 (Optician
-                                        Appointment)</a></li>
-                                <li id="step6" [class.liDisabled]="!stepsEnabled(5)" (click)="navigate(5)"><a
-                                        href="#confirm" data-toggle="tab">Step 5
+                                        Appointment)</a></li> -->
+                                <li id="step6" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
+                                        href="#confirm" data-toggle="tab">Step 4
                                         (Confirmation)</a></li>
-                                <li id="step7" [class.liDisabled]="!stepsEnabled(6)" (click)="navigate(6)"><a
-                                        href="#summary" data-toggle="tab">Step 6
+                                <li id="step7" [class.liDisabled]="!stepsEnabled(5)" (click)="navigate(5)"><a
+                                        href="#summary" data-toggle="tab">Step 5
                                         (Summary)</a></li>
                             </ul>
                         </div>
