--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
@@ -2,15 +2,19 @@
     <div class="row">
         <h4 class="info-text">Choose the appointment date and time</h4>
         <h4 class="info-text">Select Date</h4>
+        <div style="text-align: center;" *ngIf="isLoadingSpinnerEnabled">
+            <p-progressSpinner></p-progressSpinner>
+        </div>
         <div class="col-sm-3">
         </div>
+
         <!-- <div class="col-sm-5">
             <img src="../../../../assets/img/1.PNG" width="100%" height="100%">
         </div> -->
-        <div class="col-sm-5">
+        <div class="col-sm-5" *ngIf="!isLoadingSpinnerEnabled">
+
             <p-calendar [(ngModel)]="SelectedDate" [inline]="true" [showWeek]="true" [numberOfMonths]="2"
-                (onSelect)="onCallendarSelect()" [minDate]="MinDate" [maxDate]="MaxDate" [disabledDates]="InvalidDates"
-                >
+                (onSelect)="onCallendarSelect()" [minDate]="MinDate" [maxDate]="MaxDate" [disabledDates]="InvalidDates">
             </p-calendar>
         </div>
         <div class="col-sm-3">
