--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -1,58 +1,195 @@
-<div style="background: #fff">
-    <!-- <a href="#">
-        <div class="logo-container">
-            <div class="">
-                <a href="#">
-                    <h4>Eyemaxx</h4><a/>
+<!-- <div class="flex-c-m size22 bg0 s-text21 pos-relative">
+
+    <p style="text-align: center; font-size:17px; color: white"><a style="text-decoration:underline; color:white"
+            href="https://www.eyemaxx.ca/pages/our-covid-19-policies">Updated COVID Policies</a></p>
+
+    <button class="flex-c-m pos2 size23 colorwhite eff3 trans-0-4 btn-romove-top-noti">
+        <i class="fa fa-remove fs-13" aria-hidden="true"></i>
+    </button>
+</div> -->
+<div style="width: 100%; background-color: #79a0df; height: 45px;">
+    <div class="col-sm-4">
+
+    </div>
+    <div class="col-sm-4" style="text-align: center;padding: 10px;">
+        <a href="https://www.eyemaxx.ca/pages/our-covid-19-policies" style="color: white;"><strong>Updated COVID
+                Policies</strong></a>
+    </div>
+    <div class="col-sm-4">
+
+    </div>
+</div>
+<div class="row">
+    <div class="container-menu-header-v2 p-t-26" style="background-color:white">
+        <div class="topbar2">
+            <div class="topbar-social">
+                <a href="https://www.facebook.com/eyemaxx613/" class="topbar-social-item fa fa-facebook"
+                    title="Eyemaxx Optical Studio on Facebook">
+                </a>
+                <a data-toggle="tooltip" class=" topbar-social-item fa fa-twitter" data-placement="bottom"
+                    href="https://twitter.com/eyemaxx613" title=""
+                    data-original-title="Eyemaxx Optical Studio on Twitter">
+                </a>
+                <a data-toggle="tooltip" class="topbar-social-item fa fa-instagram" data-placement="bottom"
+                    href="https://www.instagram.com/eyemaxx613/" title=""
+                    data-original-title="Eyemaxx Optical Studio on Instagram">
+                </a>
+            </div>
+            <!-- Logo2 -->
+            <a href="https://www.eyemaxx.ca/" itemprop="url" class="logo2">
+                <img src="../../../../assets/img/eyemax-logo.png" alt="Eyemaxx Optical Studio" itemprop="logo" class="">
+            </a>
+            <div class="topbar-child2">
+                <span class="topbar-email">
+                    <p style="font-size:17px; color:#888;"><a style="color:#888;"
+                            href="mailto:staff@eyemaxx.ca?subject=Questions" title="">staff@eyemaxx.ca</a> | Tel:
+                        613.216.6076</p>
+                </span>
+                <div class="topbar-language rs1-select2">
+                    <span class="selected-currency" style="display:none;">CAD</span>
+                </div>
+                <!--  -->
+                <a href="https://www.eyemaxx.ca/account/login" class="header-wrapicon1 dis-block m-l-30">
+                    <img src="./Eyemaxx Optical Studio _ Ottawa Eye Exams, Glasses, &amp; Contacts_files/icon-header-01.png"
+                        class="header-icon1" alt="ICON">
+                </a>
+                <span class="linedivide1"></span>
+                <div class="header-wrapicon2 m-r-13">
+                    <img src="./Eyemaxx Optical Studio _ Ottawa Eye Exams, Glasses, &amp; Contacts_files/icon-header-02.png"
+                        class="header-icon1 js-show-header-dropdown" alt="ICON">
+                    <span class="header-icons-noti cart-total">0</span>
+                    <!-- Header cart noti -->
+                    <div id="cart" class="header-cart header-dropdown">
+                        <div id="subcart">
+
+                            <ul class="header-cart-wrapitem">
+                                <li>
+                                    <p class="text-center cart-empty">Your shopping cart is empty!</p>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        </a> -->
+        <div class="wrap_header">
+            <!-- Menu -->
+            <div class="wrap_menu">
+                <nav class="menu">
+                    <ul class="main_menu">
+                        <li class="">
+                            <a href="https://www.eyemaxx.ca/pages/book-an-eye-exam"><span
+                                    style="color:#79a0df; font-size:15px; font-weight:800">Book An
+                                    Appointment</span></a>
+                            <ul class="sub_menu">
 
-    <!--   Big container   -->
-    <div class="container">
-        <div class="row text-center">
-            <img src="../../../../assets/img/header.PNG" width="100%">
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/book-an-eye-exam">Book an Eye
+                                        Exam</a></li>
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/book-an-optical-appointment">Book an
+                                        Optical Service</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="">
+                            <a href="https://www.eyemaxx.ca/pages/ourteam">About Us</a>
+                            <ul class="sub_menu">
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/ourteam">Team</a></li>
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/optometrists">Eye doctors</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="">
+                            <a href="https://www.eyemaxx.ca/pages/our-services">Services</a>
+                            <ul class="sub_menu">
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/our-services">Eye Exams &amp; Vision
+                                        Tests</a></li>
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/contact-lenses-and-fitting">Contact
+                                        Lenses &amp; Fitting</a></li>
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/optical-services">Optical
+                                        Services</a></li>
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/our-covid-19-policies">Our COVID
+                                        Policies</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="">
+                            <a href="https://www.eyemaxx.ca/pages/our-brands">Products</a>
+                            <ul class="sub_menu">
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/lenses-brands">Lenses</a></li>
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/frames">Frames</a></li>
+
+                                <li><a class="" href="https://www.eyemaxx.ca/pages/contact-lenses-and-fitting">Contact
+                                        Lenses</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="">
+                            <a href="https://www.eyemaxx.ca/blogs/ive-been-framed">Blog</a>
+                        </li>
+                        <li class="">
+                            <a href="https://www.eyemaxx.ca/pages/contact-us">Contact Us</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- Header Icon -->
+            <div class="header-icons">
+            </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12 col">
-                <!--      Wizard container        -->
-                <div class="wizard-container">
-                    <div class="card wizard-card" data-color="red" id="wizard">
-                        <div class="wizard-header">
-                            <h3 class="wizard-title">
-                                Book an Appointment with Eyemaxx Optical Studio
-                            </h3>
-                            <h5>Please follow the steps to book an appointment</h5>
-                        </div>
-                        <div class="wizard-navigation">
-                            <ul>
-                                <li id="step1" [class.liDisabled]="!stepsEnabled(1)" (click)="navigate(1)"><a
-                                        href="#covid19" data-toggle="tab">Step 1 (COVID19-Screening)</a>
-                                </li>
-                                <!-- <li id="step2" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col">
+            <!--      Wizard container        -->
+            <div class="wizard-container">
+                <div class="card wizard-card" data-color="red" id="wizard">
+                    <div class="wizard-header">
+                        <h3 class="wizard-title">
+                            Book an Appointment with Eyemaxx Optical Studio
+                        </h3>
+                        <h5>Please follow the steps to book an appointment</h5>
+                    </div>
+                    <div class="wizard-navigation">
+                        <ul>
+                            <li id="step1" [class.liDisabled]="!stepsEnabled(1)" (click)="navigate(1)"><a
+                                    href="#covid19" data-toggle="tab">Step 1 (COVID19-Screening)</a>
+                            </li>
+                            <!-- <li id="step2" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
                                         href="#appointment-type" data-toggle="tab">Step 2 (Service Type)</a></li> -->
-                                <li id="step3" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
-                                        href="#exam-type" data-toggle="tab">Step 2
-                                        (Appointment Type)</a>
-                                </li>
-                                <li id="step4" [class.liDisabled]="!stepsEnabled(3)" (click)="navigate(3)"><a
-                                        href="#date-time" data-toggle="tab">Step 3 (Date & Time)</a></li>
-                                <!-- <li id="step5" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
+                            <li id="step3" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
+                                    href="#exam-type" data-toggle="tab">Step 2
+                                    (Appointment Type)</a>
+                            </li>
+                            <li id="step4" [class.liDisabled]="!stepsEnabled(3)" (click)="navigate(3)"><a
+                                    href="#date-time" data-toggle="tab">Step 3 (Date & Time)</a></li>
+                            <!-- <li id="step5" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
                                         href="#optician-appointment" data-toggle="tab">Step 4 (Optician
                                         Appointment)</a></li> -->
-                                <li id="step6" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
-                                        href="#confirm" data-toggle="tab">Step 4
-                                        (Confirmation)</a></li>
-                                <li id="step7" [class.liDisabled]="!stepsEnabled(5)" (click)="navigate(5)"><a
-                                        href="#summary" data-toggle="tab">Step 5
-                                        (Summary)</a></li>
-                            </ul>
-                        </div>
+                            <li id="step6" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
+                                    href="#confirm" data-toggle="tab">Step 4
+                                    (Confirmation)</a></li>
+                            <li id="step7" [class.liDisabled]="!stepsEnabled(5)" (click)="navigate(5)"><a
+                                    href="#summary" data-toggle="tab">Step 5
+                                    (Summary)</a></li>
+                        </ul>
+                    </div>
 
-                        <div class="tab-content">
-                            <router-outlet></router-outlet>
-                        </div>
-                        <!-- <div class="wizard-footer" *ngIf="currentStepStatus().validated">
+                    <div class="tab-content">
+                        <router-outlet></router-outlet>
+                    </div>
+                    <!-- <div class="wizard-footer" *ngIf="currentStepStatus().validated">
                             <div class="pull-right">
                                 <input type='button' class='btn btn-next btn-fill btn-danger btn-wd' name='next' (click)="navigate(currentStepStatus().order+1)"
                                     value='Next' />
@@ -65,7 +202,7 @@
                             </div>
                             <div class="clearfix"></div>
                         </div> -->
-                        <!-- <div class="wizard-footer" >
+                    <!-- <div class="wizard-footer" >
                             <div class="pull-right">
                                 <input type='button' class='btn btn-next btn-fill btn-danger btn-wd' name='next'
                                     value='Next' />
@@ -78,27 +215,26 @@
                             </div>
                             <div class="clearfix"></div>
                         </div> -->
-                        <div class="wizard-footer">
-                            <div class="pull-right">
-                                <button type='button' class='btn btn-next btn-fill btn-danger btn-wd liDisabled'
-                                    (click)="navigate(currentStepStatus().order+1)"
-                                    [class.liDisabled]="!currentStepStatus().validated">Next</button>
-                                <button type='button' class='btn btn-finish btn-fill btn-danger btn-wd'
-                                    (click)="BookAppointment()">Confirm and Book</button>
-                            </div>
-                            <div class="pull-left" *ngIf="currentStepStatus().order != 1">
-                                <button type='button' class='btn btn-previous btn-fill btn-default btn-wd'
-                                    (click)="navigate(currentStepStatus().order-1)">Previous</button>
-                            </div>
-                            <div class="clearfix"></div>
+                    <div class="wizard-footer">
+                        <div class="pull-right">
+                            <button type='button' class='btn btn-next btn-fill btn-danger btn-wd liDisabled'
+                                (click)="navigate(currentStepStatus().order+1)"
+                                [class.liDisabled]="!currentStepStatus().validated">Next</button>
+                            <button type='button' class='btn btn-finish btn-fill btn-danger btn-wd'
+                                (click)="BookAppointment()">Confirm and Book</button>
                         </div>
+                        <div class="pull-left" *ngIf="currentStepStatus().order != 1">
+                            <button type='button' class='btn btn-previous btn-fill btn-default btn-wd'
+                                (click)="navigate(currentStepStatus().order-1)">Previous</button>
+                        </div>
+                        <div class="clearfix"></div>
                     </div>
                 </div>
-                <!-- wizard container -->
             </div>
+            <!-- wizard container -->
         </div>
-        <!-- row -->
     </div>
+    <!-- row -->
     <!--  big container -->
 
     <!-- <div class="footer">
