last step navigation issue

--- a/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
+++ b/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 checkbox" *ngIf="appointmentTypeData.isOptomitrist">
+        <div class="col-md-6 " *ngIf="appointmentTypeData.isOptomitrist">
             <!-- <div class="checkbox"> -->
             <label>
                 <input type="checkbox" [(ngModel)]="OpticianAppointment" (change)="onOpticianAppointmentChange()">
