--- a/src/app/online-booking-module/components/appointmentconfirmation/appointmentconfirmation.component.html
+++ b/src/app/online-booking-module/components/appointmentconfirmation/appointmentconfirmation.component.html
@@ -70,6 +70,15 @@
         </div>
 
     </div>
+    <div class="row" *ngIf="isUserSelectSpinnerEnabled">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4" style="text-align: center;">
+            <p-progressSpinner [style]="{width: '50px', height: '50px'}" styleClass="custom-spinner" strokeWidth="5"
+                fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+        </div>
+        <div class="col-sm-4"></div>
+
+    </div>
     <div class="row">
         <button type="button" (click)="ShowPatientFormToEdit()" class="btn btn-secondary"
             *ngIf="SelectedUser.id!='-1'">Edit
