--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -154,4 +154,16 @@
 
         </div>
     </div>
+    <div class="row">
+
+    </div>
+    <div class="row" *ngIf="isOptomitristSpinnerEnabled">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4" style="text-align: center;">
+            <p-progressSpinner [style]="{width: '50px', height: '50px'}" styleClass="custom-spinner" strokeWidth="5"
+                fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+        </div>
+        <div class="col-sm-4"></div>
+
+    </div>
 </div>
